DockerVersion/src/main/java/com/example/dockerversion/error/CourierDeleteException.java
package com.example.dockerversion.error;

public class CourierDeleteException extends RuntimeException{
    public CourierDeleteException() {
        super("Courier didn't deleted!");
    }
}
